<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_detection_mode"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_live_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object_detection_live"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_image_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_from_gallery" />

</LinearLayout>
