<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.example.appbase.MainMenuFragment"
        android:label="@string/main_menu_title"
        tools:layout="@layout/fragment_main_menu">

        <action
            android:id="@+id/action_mainMenuFragment_to_faceRecognitionFragment"
            app:destination="@id/faceRecognitionFragment" />

        <action
            android:id="@+id/action_mainMenuFragment_to_objectDetectionFragment"
            app:destination="@id/objectDetectionFragment" />

        <action
            android:id="@+id/action_mainMenuFragment_to_ocrFragment"
            app:destination="@id/ocrFragment" />

        <action
            android:id="@+id/action_mainMenuFragment_to_navigationFragment"
            app:destination="@id/navigationFragment" />
    </fragment>

    <fragment
        android:id="@+id/faceRecognitionFragment"
        android:name="com.example.appbase.FaceRecognitionFragment"
        android:label="@string/face_recognition_title"
        tools:layout="@layout/fragment_face_recognition" />

    <fragment
        android:id="@+id/objectDetectionFragment"
        android:name="com.example.appbase.ObjectDetectionFragment"
        android:label="@string/object_detection_title"
        tools:layout="@layout/fragment_object_detection" />

    <fragment
        android:id="@+id/ocrFragment"
        android:name="com.example.appbase.OcrFragment"
        android:label="@string/ocr_title"
        tools:layout="@layout/fragment_ocr" />

    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.example.appbase.NavigationFragment"
        android:label="@string/navigation_title"
        tools:layout="@layout/fragment_navigation" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.appbase.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.appbase.SignInFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_sign_in" />

</navigation>