<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:colorBackground"
    tools:context=".ObjectDetectionFragment">

    <ImageView
        android:id="@+id/image_object_detection_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_object_detection"
        android:contentDescription="@string/object_detection_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_object_detection_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/text_object_detection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_detection_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/image_object_detection_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_object_detection_placeholder" />

    <TextView
        android:id="@+id/text_object_detection_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_detection_placeholder"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_object_detection_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
